--- a/team.html
+++ b/team.html
@@ -13,10 +13,10 @@ permalink: /team
           <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          John Doe
+          Alison Andrade
         </h4>
         <p>
-          Web Developer , Technext
+          Ingeniera en sistemas
         </p>
       </div>
       <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
@@ -24,10 +24,10 @@ permalink: /team
           <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Jane Ley
+          Alejandro Castillo
         </h4>
         <p>
-          Software Developer , Technext
+          Desarrollador de software
         </p>
       </div>
       <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
@@ -35,10 +35,10 @@ permalink: /team
           <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Jany Doe
+          Berenice Ayala
         </h4>
         <p>
-          App Developer , Technext
+          Desarrolladora de APPS
         </p>
       </div>
   </div>
@@ -48,10 +48,10 @@ permalink: /team
         <img src="../assets/img/team/member3.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        John Doe
+        Aidan Veloz
       </h4>
       <p>
-        Android Developer , Technext
+        Administrador de empresas
       </p>
     </div>
     <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
@@ -59,10 +59,10 @@ permalink: /team
         <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        Chris Way
+        Yatziri Hernandez
       </h4>
       <p>
-        iOS Developer , Technext
+        Tecnico en Ofimatica
       </p>
     </div>
     <div class="blockquote-box animated wow fadeInRight clearfix">
@@ -70,10 +70,10 @@ permalink: /team
         <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        Christopher
+        Christopher Vazquez
       </h4>
       <p>
-        Web Developer , Technext
+        Desarrollador WEB
       </p>
       </div>
     </div>
