--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@ permalink: /about
 <div class="container">   
   <div class="row">
     <div class="side-left col-sm-4 col-md-4">
-      <h3 class="lead">  About our Fiil : </h3><hr>
+      <h3 class="lead">  Acerca de Tiendas Valely : </h3><hr>
 
-      <p>Curabitur vulputate, ligula lacinia scelris que tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class apte nt taeraciti sociosqu ad litora torquent.</p>
+      <p>Valely es una marca especializada en ropa, es una de las mejores marcas de ropa en el mundo, posicionandose dentro de las mejores 5, con ropa de calidad y con buenas diseños, adaptados a todas las generaciones y futuras generaciones.</p>
       <a href="#anchor1"> Our Firm's History</a><br>
       <a href="#anchor2"> Philosophy</a><br>
       <a href="#anchor3">Media / In the Press</a><br>
