--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ permalink: /about
       <h3 class="lead">  Acerca de Tiendas Valely : </h3><hr>
 
       <p>Valely es una marca especializada en ropa, es una de las mejores marcas de ropa en el mundo, posicionandose dentro de las mejores 5, con ropa de calidad y con buenas diseños, adaptados a todas las generaciones y futuras generaciones.</p>
-      <a href="#anchor1"> Our Firm's History</a><br>
+      <a href="#anchor1"> Historia de nuestra marca Valely</a><br>
       <a href="#anchor2"> Philosophy</a><br>
       <a href="#anchor3">Media / In the Press</a><br>
       <br>
@@ -24,9 +24,9 @@ permalink: /about
       Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.
     </div>
     <div class="col-sm-8 col-md-8">
-        <h3 class="lead"id="anchor1"> Our Firm's History </h3><hr>
+        <h3 class="lead"id="anchor1"> Historia de nuestra marca Valely </h3><hr>
         <p>
-          Curabitur vulputate, ligula lacinia scelrisque tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class aptent taeraciti sociosqu ad litora torquent. Hibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a dolor sit amet lipsum enim in.
+          Comienza con nuestra fundadora y actual CEO, Valeria Trujano Bobadilla, comenzo con el deseo de nuevos y mejorados diseños que se adaptaran a las necesidades del cliente pero sin olvidar el estilo, comodidad y elegancia de la moda,tras conseguir su objetivo nuevos clientes se interesaron el ropa Valely, sus diseños se convirtieron en grandes tendencias a psesar de ser una empresa pequeña, tras sus grandes exitos y grandiosas colecciones, se comenzo a expandir logrando ser una empresa mas grande y consiguio grandes inversionistas.
         </p>
 
         <h4>2002 - LOREM IPSUM DOLOR</h4>
