--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@ permalink: /about
           Comienza con nuestra fundadora y actual CEO, Valeria Trujano Bobadilla, comenzo con el deseo de nuevos y mejorados diseños que se adaptaran a las necesidades del cliente pero sin olvidar el estilo, comodidad y elegancia de la moda,tras conseguir su objetivo nuevos clientes se interesaron el ropa Valely, sus diseños se convirtieron en grandes tendencias a psesar de ser una empresa pequeña, tras sus grandes exitos y grandiosas colecciones, se comenzo a expandir logrando ser una empresa mas grande y consiguio grandes inversionistas.
         </p>
 
-        <h4>2002 - LOREM IPSUM DOLOR</h4>
-        <p>Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.</p>
+        <h4>18/02/2002 - Inversionista Gucci</h4>
+        <p>Nuestro primer y gran inversionista Gucci se une a Valely el 18 de febrero de 2002, consiguiendo asi dos de las mejores colecciones de ese año, generando asi ser conocida en gran parte del continente americano, se crearon dos grandes colecciones que impulzaron ambas empresas y se volvieron tendencia..</p>
 
         <h4>2007 - VIVAMUS HENDERIT</h4>
         <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
