--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ permalink: /about
         <h4>18/02/2002 - Inversionista Gucci</h4>
         <p>Nuestro primer y gran inversionista Gucci se une a Valely el 18 de febrero de 2002, consiguiendo asi dos de las mejores colecciones de ese año, generando asi ser conocida en gran parte del continente americano, se crearon dos grandes colecciones que impulzaron ambas empresas y se volvieron tendencia..</p>
 
-        <h4>2007 - VIVAMUS HENDERIT</h4>
+        <h4>2007 - VIVAMUS HENDERITERIT</h4>
         <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
 
         <h4>2008 - PRAESENT ID METUS</h4>
