--- a/about.html
+++ b/about.html
@@ -29,15 +29,15 @@ permalink: /about
           Comienza con nuestra fundadora y actual CEO, Valeria Trujano Bobadilla, comenzo con el deseo de nuevos y mejorados diseños que se adaptaran a las necesidades del cliente pero sin olvidar el estilo, comodidad y elegancia de la moda,tras conseguir su objetivo nuevos clientes se interesaron el ropa Valely, sus diseños se convirtieron en grandes tendencias a psesar de ser una empresa pequeña, tras sus grandes exitos y grandiosas colecciones, se comenzo a expandir logrando ser una empresa mas grande y consiguio grandes inversionistas.
         </p>
 
-        <h4>18/02/2002 - Inversionista Gucci</h4>
+        <h4>18/02/2002 - Colaboracion con Gucci</h4>
         <p>Nuestro primer y gran inversionista Gucci se une a Valely el 18 de febrero de 2002, consiguiendo asi dos de las mejores colecciones de ese año, generando asi ser conocida en gran parte del continente americano, se crearon dos grandes colecciones que impulzaron ambas empresas y se volvieron tendencia..</p>
 
-        <h4>2007 - VIVAMUS HENDERITERIT</h4>
-        <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
+        <h4>13/10/2005 - Colaboracion con Vogue</h4>
+        <p>En el año 2005 despues de la gran colaboracion con Gucci, valely realiza otra colaboracion con Vogue, sacando una coleccion de otoño que se hizo tendencia en el continente americano y europeo, consiguiendo mas prestigio Valely.</p>
 
-        <h4>2008 - PRAESENT ID METUS</h4>
+        <h4>09/03/2010 - Colaboracion con Dior</h4>
         <p>
-          Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio.
+          En Marzo de 2010 se presenta otra de las mas grandes colaboraciones de Valely y esta vez con Dior, alcanzando grandes logros con sus colecciones de primavera-verano, esta coleccion fue mundialmente conocida, haciendo mas conocidad ambas marcas de ropa por el mundo, gracias a esta colaboracion fue la primera vez que tiendas Valely entro entre las 10 mejores marcas del mundo, haciendo gran expansion de tiendas Valely por el mundo..
         </p>
         <h3 class="lead"id="anchor2">Our Philosophy:</h3>
         <p>
