--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@ permalink: /about
       <a href="#anchor2"> Philosophy</a><br>
       <a href="#anchor3">Media / In the Press</a><br>
       <br>
-      <h4>2002 - LOREM IPSUM DOLOR :</h4><hr>
-      Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.
+      <h4>Nuestro objetivo :</h4><hr>
+      El objetivo de Valely es alcanzar los rincones del mundo y conquistando a las personas con nuevos y mejorados diseños, y en el mundo de la moda dejar nuestra huella con nuestros grandes disweños, pero sin olvidar las necesidades de las personas y su comodidad.
     </div>
     <div class="col-sm-8 col-md-8">
         <h3 class="lead"id="anchor1"> Historia de nuestra marca Valely </h3><hr>
