--- a/about.html
+++ b/about.html
@@ -39,11 +39,11 @@ permalink: /about
         <p>
           En Marzo de 2010 se presenta otra de las mas grandes colaboraciones de Valely y esta vez con Dior, alcanzando grandes logros con sus colecciones de primavera-verano, esta coleccion fue mundialmente conocida, haciendo mas conocidad ambas marcas de ropa por el mundo, gracias a esta colaboracion fue la primera vez que tiendas Valely entro entre las 10 mejores marcas del mundo, haciendo gran expansion de tiendas Valely por el mundo..
         </p>
-        <h3 class="lead"id="anchor2">Our Philosophy:</h3>
+        <h3 class="lead"id="anchor2">¿Qué ofrecemos?:</h3>
         <p>
-          Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit.
-          Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.
-          Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc. <br>
+          En tienda Valely ofrecemos diversos estilos y diversas modas, diversas tallas, y diversos conjuntos, puedes encontrar todo lo que se te ocurra o quieras utilizar por que es parte de tu personalidad, 
+          ofrecemos de todas las tallas de todos los diseños, tenemos una alta calidad, no solo tu te sentiras comoda si no que toda tu familia lo hara, tenemos faldas de la talla extra chica a tallas grandes, 
+          pantalones de tallas chicas a tallas grandes, se tiene todo tipo de ropa a todas las tallas y con alta calidad, para tu estilo unico y esencial. <br>
         </p>
 
         <h3 class="lead"id="anchor3">In the Press:</h3>
