--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ permalink: /about
         <p>
           En Marzo de 2010 se presenta otra de las mas grandes colaboraciones de Valely y esta vez con Dior, alcanzando grandes logros con sus colecciones de primavera-verano, esta coleccion fue mundialmente conocida, haciendo mas conocidad ambas marcas de ropa por el mundo, gracias a esta colaboracion fue la primera vez que tiendas Valely entro entre las 10 mejores marcas del mundo, haciendo gran expansion de tiendas Valely por el mundo..
         </p>
-        <h3 class="lead"id="anchor2">¿Qué ofrecemos?:</h3>
+        <h3 class="lead"id="anchor2">Qué ofrecemos:</h3>
         <p>
           En tienda Valely ofrecemos diversos estilos y diversas modas, diversas tallas, y diversos conjuntos, puedes encontrar todo lo que se te ocurra o quieras utilizar por que es parte de tu personalidad, 
           ofrecemos de todas las tallas de todos los diseños, tenemos una alta calidad, no solo tu te sentiras comoda si no que toda tu familia lo hara, tenemos faldas de la talla extra chica a tallas grandes, 
