--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@ permalink: /about
           pantalones de tallas chicas a tallas grandes, se tiene todo tipo de ropa a todas las tallas y con alta calidad, para tu estilo unico y esencial. <br>
         </p>
 
-        <h3 class="lead"id="anchor3">In the Press:</h3>
+        <h3 class="lead"id="anchor3">En las redes:</h3>
         <blockquote>
-          <em>Donec congue lacinia dui, a porttitor lectus condimentum oreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus e vestibulum faucibus et in metus. In pellentesque faucibus vestibulum. Nulla nulla justo, eget luctus tortor dolor sit amet lipsum odio lectus congue.</em>
+          <em>Tiendas Valely es de las mejores marcas que he comprado, yo soy muy sensible de la piel y su ropa no me irrita nada, es de muy buena calidad y tienen muy buenos diseños, no solo para mi si no tambien para mis hijos y marido, realmente es la mejor marca.</em>
         </blockquote>
-        <p class="block-author"> MARCIA HERNANDEZ, CLIENT</p>
+        <p class="block-author"> MARCIA HERNANDEZ, CLIENTE</p>
         <br><br>
-        <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p></p>
+        <p>En tiendas Valely ofrecemos lo mejor para usted y su familia, la importancia de vestir bien y de calidad es mucha, Valely quiere que usted tenga lo mejor y es nuestro unico objetivo.</p></p>
     </div>  
   </div>    
 </div>  
